Updated the views

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <div class="container">
             <form>
-                <div class="form-group">
+                <div class="form-group" style="margin-top: 40px">
                     <label for="exampleInputEmail1">Product Id</label>
                     <input type="text" class="form-control" id="Id" aria-describedby="emailHelp" placeholder="Enter Product Id">
                 </div>
@@ -36,7 +36,9 @@
     
 
 
-                <button type="submit" class="btn btn-primary">Add to Cart</button>
+                <button style="margin-top: 15px" type="submit" class="btn btn-primary">Add to Cart</button><br />
+
+                <button style="margin-top: 40px" type="submit" class="btn btn-primary">Compute total price</button>
 
 
 <br>
