--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 
                     <div class="form-group">
                             <label for="exampleInputPassword1">Price</label>
-                            <input type="text" class="form-control" id="Quantity" placeholder="Enter Product Price">
+                            <input type="text" class="form-control" id="Price" placeholder="Enter Product Price">
                         </div>
     
 
 
-                <button style="margin-top: 15px" type="submit" class="btn btn-primary">Add to Cart</button><br />
+                <button style="margin-top: 15px" type="submit" class="btn btn-primary" id="add_to_cart">Add to Cart</button><br />
 
                 <button style="margin-top: 40px" type="submit" class="btn btn-primary">Compute total price</button>
 
@@ -46,7 +46,7 @@
 <br>
 <br>
 
-<table class="table table-dark">
+<table class="table table-dark" id="shopping-cart-table">
         <thead>
           <tr>
             <th scope="col">ID</th>
@@ -55,7 +55,11 @@
             <th scope="col">Price</th>
           </tr>
         </thead>
+        <tbody>
+            
+        </tbody>
       </table>
     </div>
+    <script src="app.js" type="text/javascript"></script>
     </body>
 </html>
