Subtle changes made

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       </form> -->
 
     <body>
+
+        <script src="app.js"></script>
+
         <div class="container">
             <form>
                 <div class="form-group" style="margin-top: 40px">
