--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
         <title>Shopping Cart</title>
     </head>
 
-    <!--
-      </form> -->
-
     <body>
         <div class="container">
-            <form>
                 <div class="form-group" style="margin-top: 40px">
                     <label for="exampleInputEmail1">Product Id</label>
                     <input type="text" class="form-control" id="Id" aria-describedby="emailHelp" placeholder="Enter Product Id">
@@ -39,12 +35,6 @@
 
                 <button style="margin-top: 15px" type="submit" class="btn btn-primary" id="add_to_cart">Add to Cart</button><br />
 
-                <button style="margin-top: 40px" type="submit" class="btn btn-primary">Compute total price</button>
-
-
-<br>
-<br>
-<br>
 <br>
 
 <table class="table table-dark" id="shopping-cart-table">
@@ -60,6 +50,8 @@
         <tbody>
         </tbody>
       </table>
+
+      <h3 id="grand-total">Grand total</h3>
     </div>
     <script src="app.js" type="text/javascript"></script>
     </body>
