--- a/index.html
+++ b/index.html
@@ -37,6 +37,20 @@
 
 <br>
 
+<table class="table table-dark" id="all-items-table">
+    <thead>
+      <tr>
+        <th scope="col">ID</th>
+        <th scope="col">Quantity</th>
+        <th scope="col">Description</th>
+        <th scope="col">Price</th>
+        <th scope="col">Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+    </tbody>
+  </table>
+
 <table class="table table-dark" id="shopping-cart-table">
         <thead>
           <tr>
